Reconfigured CORS in Web Security Class